Correct header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ nav a:hover {
 @media only screen and (min-width: 38em) {
 
   h1 {
-    text-align: center;
+    text-align: left;
   }
 
   nav {
